[package]
name = "fulmen"
version = "0.0.1"
description = "Rendering Engine made with Vulkan"
crate-type = ["lib"]
edition = "2021"

authors = ["Xeros08 <42175313+Xeros08@users.noreply.github.com>"]


[workspace]
resolver = "2"
members = ["modules/*"]


[dependencies]
# Engine Modules
core = { path = "modules/core" }
# renderer = { path = "modules/renderer", optional = true }
# logging = { path = "modules/logging", optional = true }

# Other
#log = "0.4.0"
#glfw = { version = "0.53.0", features = ["vulkan"] }


[features]
default = ["rendering"]

rendering = ["core/rendering"]
logging = ["core/logging"]
debug_logging = ["core/debug_logging"]
