[package]
name = "fulmen"
version = "0.0.1"
description = "Rendering Engine made with Vulkan"
crate-type = ["lib"]
edition = "2021"

authors = ["Xeros08 <42175313+Xeros08@users.noreply.github.com>"]


[workspace]
resolver = "2"
members = ["modules/*"]


[workspace.dependencies]
# Logging
thiserror = { version = ">=1.0.60" }
log = { version = ">=0.4" }

[dependencies]
# Engine Modules
core = { path = "modules/core" }



[features]
default = ["rendering"]

rendering = ["core/rendering"]
logging = ["core/logging"]
debug_logging = ["core/debug_logging"]
