[package]
name = "test_app"
authors = ["Xeros08 <42175313+Xeros08@users.noreply.github.com>"]
version = "0.0.1"
description = "Test app that makes use of the rendering engine"
edition = "2021"



[dependencies]
engine = { package = "lvengine", path = "../lvengine" }

log = "0.4.0"
env_logger = "0.10.0"



[features]
