[package]
name = "test_app"
version = "0.0.1"
description = "Test app that makes use of the rendering engine"
authors = ["Xeros08 <42175313+Xeros08@users.noreply.github.com>"]
edition = "2021"

[dependencies]
# Logging
env_logger = "0.11.4"
log = "0.4.0"

# My Engine
[dependencies.engine]
package = "fulmen"
path = "../fulmen"
default-features = false
features = ["logging", "rendering", "debug", "trace_logging"]

# Other


[features]


[profile.dev]
debug = false
debug-assertions = true
lto = false             # Faster linking, worse optimizations
incremental = true      # Better re-compilation times
codegen-units = 32      # Same as non incremental builds
overflow-checks = true
panic = 'unwind'
[profile.dev.package."*"]
opt-level = 3
incremental = false

# Profile in case 'dev' doesn't have enough debug info
[profile.devinfo]
inherits = 'dev'
debug = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
incremental = false
