[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Modules
renderer = { path = "../renderer", optional = true }

# Other
thiserror = { version = ">=1.0.60" }
log = { version = ">=0.4", optional = true }



[features]
logging = ["dep:log", "renderer/logging"]
rendering = ["dep:renderer"]
debug = ["logging", "renderer/debug"]