[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Modules
renderer = { path = "../renderer", optional = true }

# Logging
thiserror = { workspace = true }
log = { workspace = true, optional = true }

# Graphics
winit = { version = "0.30", optional = true, default-features = false, features = [
    "rwh_06",
] }

# Other
# ahash = { version = "0.8.7", default-features = false, features = [
#     "runtime-rng",
# ] }


[features]
rendering = ["dep:renderer", "dep:winit"]
# x11 = ["rendering", "winit/x11"]
# wayland = ["rendering", "winit/wayland"]

logging = ["dep:log", "renderer/logging"]
debug_logging = ["logging", "renderer/debug_logging"]
