[package]
name = "fecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Modules

# Logging
thiserror = { workspace = true }
log = { workspace = true, optional = true }

# Other



[features]
logging = ["dep:log"]
debug_logging = ["logging"]
