[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Modules

# Other
log = { version = ">=0.4", optional = true }
ash = { version = "0.38.0", default-features = false, features = [
    "std",
    "linked",
] }


[features]
logging = ["dep:log"]
vk_validation = ["logging", "ash/debug"]
additional_logging = ["logging"]
debug = ["additional_logging", "vk_validation"]
