[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Modules

# Other
thiserror = { version = ">=1.0.60" }
log = { version = ">=0.4", optional = true }
ash = { version = "0.38.0", default-features = false, features = [
    "std",
    "linked",
] }


[features]
logging = ["dep:log"]
vk_validation = ["logging", "ash/debug"]
trace_logging = ["logging"]
debug = ["trace_logging", "vk_validation"]
