[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Modules

# Other
thiserror = { version = ">=1.0.60" }
log = { version = ">=0.4", optional = true }

# Graphics
ash = { version = "0.38.0", default-features = false, features = [
    "std",
    "linked",
] }
raw-window-handle = "0.6"
ash-window = "0.13"


[features]
vk_validation = ["logging", "ash/debug"]

logging = ["dep:log"]
debug_logging = ["logging", "vk_validation"]
